--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,1 @@
-* @paketo-buildpacks/builders-maintainers
-* @paketo-buildpacks/java-maintainers
-* @paketo-buildpacks/steering-committee
+* @paketo-buildpacks/builders-maintainers @paketo-buildpacks/java-maintainers  @paketo-buildpacks/steering-committee
